add location information to both the index page and training page for gemconf

--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -31,6 +31,7 @@
       <p>Ember Fast Track & Expansion Pack training with Ember Weekend.</p>
       <p>This training is designed to quickly level up your Ember skills. The fast paced curriculum will focus on building a solid foundation in Ember and dive into advanced Ember techniques.</p>
       <p>Receive video access to Ember training content prior to this 2 day training.</p>
+      <p>Attend online or in person at Interactive Intelligence in RTP - Durham, NC </p>
       <p>Full details on training {{link-to 'here' 'gemconf.training'}}.</p>
       <a class="button red-button" href={{model.eventbrite}}>Register Today</a>
 
@@ -42,16 +43,16 @@
 
         <h4>Friday 8/12, 1pm-5pm</h4>
 
-        <p>Free 4 Hour Intro to Ember and Rapid Prototyping Workshop with Taras Mankovski and Brendan O'Hara.</p>
+        <p>Free 4 Hour Intro to Ember and Rapid Prototyping Workshop with Taras Mankovski and Brendan O'Hara at <a href="http://nestraleigh.com">Nest Raleigh</a></p>
 
         <h4>Saturday 8/13, 9am-5pm</h4>
-        <p>GEMconf Conference Day & Talks at Bronto Software</p>
+        <p>GEMconf Conference Day & Talks at <a href="http://bronto.com">Bronto Software</a></p>
 
         <h4>Monday 8/15, 10am-6pm</h4>
-        <p>Training & Workshop with Ember Fast Track with Ember Weekend ({{link-to 'Course Details' 'gemconf.training'}}.)</p>
+        <p>Training & Workshop with Ember Fast Track with Ember Weekend hosted at <a href="http://inin.com">Interactive Intelligence</a>. ({{link-to 'Course Details' 'gemconf.training'}}.)</p>
 
         <h4>Tuesday 8/16, 10am-6pm</h4>
-        <p>Training & Workshop with Ember Expansion Track with Ember Weekend ({{link-to 'Course Details' 'gemconf.training'}}.)</p>
+        <p>Training & Workshop with Ember Expansion Track with Ember Weekend hosted at <a href="http://inin.com">Interactive Intelligence</a>. ({{link-to 'Course Details' 'gemconf.training'}}.)</p>
 
       {{/box-content}}
 
@@ -59,7 +60,7 @@
 
         <h2 class="give-whitespace center">Free 4 Hour Ember.JS Workshop</h2>
 
-        <h4>Friday 8/12</h4>
+        <h4>Friday 8/12 at <a href="http://nestraleigh.com">Nest Raleigh</a></h4>
 
         <p>Intro to Ember and Rapid Prototyping, a 4 hour workshop with Taras Mankovski and Brendan O'Hara</p>
 
@@ -89,7 +90,7 @@
 
         <h2 class="give-whitespace center">Conference Day & Talks</h2>
 
-        <h4>Saturday 8/13</h4>
+        <h4>Saturday 8/13 at <a href="http://bronto.com">Bronto Software</a></h4>
         {{#box-content}}
         <h3>Keynote by Todd Jordan, EmberJS Learning Team Core Member</h3>
         <p>Ember has a passionate, welcoming, and very active open source community, which is a big factor in its success.  I’ll discuss my experiences from being brand new to Ember just a year ago to being on the Ember learning sub-team today, and about what I’ve seen work well in welcoming and fostering an active community.</p>
