--- a/app/templates/gemconf/training.hbs
+++ b/app/templates/gemconf/training.hbs
@@ -10,14 +10,14 @@
     }}
       <h2>Live training at GEMconf</h2>
       <h3>We are offering a 2 day training course as part of GEMconf Triangle, covering both fundamental & advanced topics.</h3>
-      <p>        
-        Whether you're looking for a solid understanding of all the fundamentals needed to be an effective 
-        Ember developer, or looking to dive deeper into the issues that face developers of larger, more 
-        complex Ember apps, we've got you covered. This is an intensive learning experience, aiming to 
+      <p>
+        Whether you're looking for a solid understanding of all the fundamentals needed to be an effective
+        Ember developer, or looking to dive deeper into the issues that face developers of larger, more
+        complex Ember apps, we've got you covered. This is an intensive learning experience, aiming to
         accelerate your career by ensuring a complete awareness of the skills and experience required to build ambitious web applications.
       </p>
       <p>
-        We believe learning happens best when supported by connections to others in the community. 
+        We believe learning happens best when supported by connections to others in the community.
         We'd love to have you join us this August in the Triangle.
       </p>
       <p>
@@ -43,6 +43,10 @@
 
     {{#box-content}}
       <h2 class="give-whitespace center">Schedule</h2>
+      <div id="location">
+        <h3>Location</h3>
+        <p>The training will be held online and in person at <a href="http://inin.com">Interactive Intelligence</a> in RTP - Durham, NC.</p>
+      </div>
       <div id="day-1">
           <h3>Day 1 - Ember Fundamentals</h3>
           <p class="red">Monday Aug 15, 2016, 10am-6pm ET</p>
@@ -51,8 +55,8 @@
             <a class="button red-button" href={{model.eventbrite}}>Participate in the Research Triangle - $1099</a>
           </p>
           <p>
-            This day is designed to give the learner an in-depth understanding of all the 
-            fundamentals needed to build a complex Ember app. It includes access to pre-recorded 
+            This day is designed to give the learner an in-depth understanding of all the
+            fundamentals needed to build a complex Ember app. It includes access to pre-recorded
             videos and a live, hands-on and project-based workshop.
           </p>
           <h4>Who is this for?</h4>
@@ -112,7 +116,7 @@
             Attendance of Day 1 is not required, but we recommended you ensure you have a good understanding of how to do all of the things we cover in the Fundamentals section.
           </p>
           <p>
-            In the Advanced workshop, we'll build on the foundation of the app we created in Day 1 and dive deeper into topics that arise as your app gets larger and more feature complete, such as adding test coverage, interacting with various APIs and persisting that data to various backends, how to deal with realtime scenarios, and best practices to keep your code organized, clean and maintainable as your project grows. 
+            In the Advanced workshop, we'll build on the foundation of the app we created in Day 1 and dive deeper into topics that arise as your app gets larger and more feature complete, such as adding test coverage, interacting with various APIs and persisting that data to various backends, how to deal with realtime scenarios, and best practices to keep your code organized, clean and maintainable as your project grows.
           </p>
           <h4>What You'll Learn:</h4>
             <dl>
@@ -143,13 +147,13 @@
               <dt>Sockets</dt>
               <dd>Learn how to integrate real-time data into Ember Data with sockets.</dd>
               <dt>Deployment</dt>
-              <dd>Deploy your Ember apps easily and confidently with <a href="https://ember-cli.com/ember-cli-deploy/">ember-cli-deploy</a>.</dd>          
+              <dd>Deploy your Ember apps easily and confidently with <a href="https://ember-cli.com/ember-cli-deploy/">ember-cli-deploy</a>.</dd>
             </dl>
             <p>
               Remote learners will see the instructor’s screen and have a crisp audio feed of what’s being said. There will be a Slack room for group chat and a system for 2 way voice communication so we can hear your questions too!
             </p>
             <p>
-              Along the way, you’ll hear stories from Chase and Jonathan about working on the front lines of a busy consulting shop and get to ask them about issues specific to your projects! 
+              Along the way, you’ll hear stories from Chase and Jonathan about working on the front lines of a busy consulting shop and get to ask them about issues specific to your projects!
             </p>
         </div>
 
