Escape characters in agenda items

--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -144,7 +144,7 @@
         {{agenda.item '10:40' 'Community Discussion led by Taras Mankovski'}}
 
         {{agenda.item '11:00' 'Building an Open Source Commercial Application with Ember.js with Harvey Kandola (@harveykandola)'}}
-        {{agenda.item '11:30' 'Community Discussion led by Brendan O'Hara'}}
+        {{agenda.item '11:30' 'Community Discussion led by Brendan O\'Hara'}}
         {{agenda.item '11:45' 'Template first programming with ember.js with Taras Mankovski (@embersherpa)'}}
         {{agenda.item '11:55' 'Common Ember Component Errors with Justin Ray (@thejustinaray)'}}
 
@@ -153,12 +153,12 @@
         {{agenda.item '12:55' 'Ember blueprints for fun and profit with Chris McCuller (@ultimatemonty)'}}
 
         {{agenda.item '13:25' 'Community Discussion '}}
-        {{agenda.item '13:45' 'Frontend Strategy for Start-Ups w/ Ember with Brendan O'Hara (@brendanohara)'}}
+        {{agenda.item '13:45' 'Frontend Strategy for Start-Ups w/ Ember with Brendan O\'Hara (@brendanohara)'}}
 
         {{agenda.item '14:15' 'Community Discussion'}}
         {{agenda.item '14:35' 'Ember Game'}}
         {{agenda.item '14:45' 'Server logging with Ember: a window into your clients with Xander Dumaine (@xanderdumaine)'}}
-        {{agenda.item '14:55' 'Reflections on Accessibility in the Workplace: from a Deaf Engineer's Perspective with James Tranovich (@cantsin_)'}}
+        {{agenda.item '14:55' 'Reflections on Accessibility in the Workplace: from a Deaf Engineer\'s Perspective with James Tranovich (@cantsin_)'}}
 
         {{agenda.item '15:25' 'Community Discussion'}}
         {{agenda.item '15:45' 'How to Contribute to the Open Source Community'}}
