--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -113,7 +113,7 @@
     <dl class="date-list">
       <div class="row">
         <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 11th</dt>
-        <dd>Access to Authentication Fundumentals Videos</dd>
+        <dd>Access to Authentication Fundamentals Videos</dd>
       </div>
       <div class="row">
         <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th</dt>
