Update schedule according to Eventbrite. (#17)
* Update schedule according to Eventbrite.

* Escape characters in agenda items

--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -136,35 +136,35 @@
 
         {{agenda.item '9:00' 'Gathering & Breakfast'}}
         {{agenda.item '9:30' 'Keynote with Taras (@embersherpa) and Tracy (@ladyleet)'}}
-        {{agenda.item '10:00' 'Keynote with Todd Jordan (@tddjordan), Learning Core Team member'}}
+        {{agenda.item '9:45' 'Keynote with Todd Jordan (@tddjordan), Learning Core Team member'}}
+        {{agenda.item '9:50' 'Game: Win Ember Training'}}
 
-        {{agenda.item '10:10' "What's up in Emberland with EmberWeekend (@emberweekend)"}}
+        {{agenda.item '10:00' "What's up in Emberland with EmberWeekend (@emberweekend)"}}
+        {{agenda.item '10:10' 'Cardstack CMS with Edward Faulkner (@eaf4)'}}
+        {{agenda.item '10:40' 'Community Discussion led by Taras Mankovski'}}
 
-        {{agenda.item '10:20' 'Building an Open Source Commercial Application with Ember.js with Harvey Kandola (@harveykandola)'}}
-        {{agenda.item '10:50' 'Community Discussion'}}
+        {{agenda.item '11:00' 'Building an Open Source Commercial Application with Ember.js with Harvey Kandola (@harveykandola)'}}
+        {{agenda.item '11:30' 'Community Discussion led by Brendan O\'Hara'}}
+        {{agenda.item '11:45' 'Template first programming with ember.js with Taras Mankovski (@embersherpa)'}}
+        {{agenda.item '11:55' 'Common Ember Component Errors with Justin Ray (@thejustinaray)'}}
 
-        {{agenda.item '11:10' 'Cardstack CMS with Edward Faulkner (@eaf4)'}}
-        {{agenda.item '11:40' 'Community Discussion'}}
+        {{agenda.item '12:05' 'Lunch'}}
+        {{agenda.item '12:45' 'Ember Game'}}
+        {{agenda.item '12:55' 'Ember blueprints for fun and profit with Chris McCuller (@ultimatemonty)'}}
 
-        {{agenda.item '12:00' 'Lunch'}}
+        {{agenda.item '13:25' 'Community Discussion '}}
+        {{agenda.item '13:45' 'Frontend Strategy for Start-Ups w/ Ember with Brendan O\'Hara (@brendanohara)'}}
 
-        {{agenda.item '13:00' 'Ember Jeopardy'}}
-        {{agenda.item '13:15' 'Lightning Talks'}}
+        {{agenda.item '14:15' 'Community Discussion'}}
+        {{agenda.item '14:35' 'Ember Game'}}
+        {{agenda.item '14:45' 'Server logging with Ember: a window into your clients with Xander Dumaine (@xanderdumaine)'}}
+        {{agenda.item '14:55' 'Reflections on Accessibility in the Workplace: from a Deaf Engineer\'s Perspective with James Tranovich (@cantsin_)'}}
 
-        {{agenda.item '13:30' "Reflections on Accessibility in the Workplace: from a Deaf Engineer's Perspective with James Tranovich (@cantsin_)"}}
-        {{agenda.item '14:00' 'Community Discussion'}}
+        {{agenda.item '15:25' 'Community Discussion'}}
+        {{agenda.item '15:45' 'How to Contribute to the Open Source Community'}}
 
-        {{agenda.item '14:25' 'Ember Game'}}
-
-        {{agenda.item '14:35' 'Landing your first PRs in the Ember Open Source Community with Tracy Lee (@ladyleet)'}}
-        {{agenda.item '15:05' 'Community Discussion'}}
-
-        {{agenda.item '15:30' 'Ember Jeopardy'}}
-
-        {{agenda.item '15:45' 'Rapid prototyping with Ember.js by Brendan OHara'}}
-        {{agenda.item '16:15' 'Community Discussion'}}
-
-        {{agenda.item '16:40' 'Closing Keynote'}}
+        {{agenda.item '16:15' 'Community Discussion led by Julie David'}}
+        {{agenda.item '16:35' 'Closing Keynote'}}
 
       {{/gem-agenda}}
     {{/box-content}}
