--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -1,6 +1,6 @@
 {{scroll-to position=0}}
 
-<div class="episodes-page">
+<div class="episodes-page page-wrap">
 
   <h1 class="episodes-page--title">Season {{season}}</h1>
 
