--- a/app/styles/pages/_index.scss
+++ b/app/styles/pages/_index.scss
@@ -34,6 +34,10 @@
 
 .videos-page.index-section {
   padding: 0;
+  .all-videos-button {
+    text-align: center;
+    padding: 20px 0;
+  }
 }
 
 .full-line-header {
