--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -1,6 +1,6 @@
 {{scroll-to position=0}}
 
-<article class="video-page">
+<article class="video-page page-wrap">
   <main>
     {{responsive-vimeo-video model.vimeo}}
     {{#if (or media.isMobile media.isTablet)}}
@@ -24,6 +24,6 @@
     {{/if}}
   </aside>
   <section>
-    
+
   </section>
 </article>
