--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -26,5 +26,10 @@
         </div>
       {{/each}}
     </div>
+    <div class="all-videos-button">
+      {{#link-to 'show' class='blue-button button'}}
+        All Videos <i class="fa fa-arrow-right"></i>
+      {{/link-to}}
+    </div>
   </div>
 </section>
