--- a/app/styles/pages/_conference.scss
+++ b/app/styles/pages/_conference.scss
@@ -1,56 +1,56 @@
 header.gemconf {
   background-color: $skyBlue;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center 100px;
   height: 658px;
-  
+
   .hero-title {
     color: $darkerBlue;
-    padding-top: 80px;    
+    padding-top: 80px;
   }
-  
+
   .hero-sub-title, .call-to-action {
     display: block;
     position: absolute;
     width: 100%;
-    text-align: center;        
+    text-align: center;
   }
 
   .hero-sub-title {
     color: $blue;
   }
-  
+
   @include media($mobile) {
     .hero-title {
       font-size: 64px;
       top: 100px;
     }
-    
+
     .hero-sub-title {
-      top: 180px;
+      top: 260px;
     }
-    
+
     .call-to-action {
-      top: 220px;
+      top: 320px;
     }
   }
-  
+
   @include media($tablet) {
     .hero-title {
       font-size: 86px;
       top: 80px;
     }
-    
+
     .hero-sub-title {
       font-size: 42px;
-      top: 180px;
+      top: 260px;
     }
-    
+
     .call-to-action {
-      top: 240px;
+      top: 320px;
     }
   }
-    
+
   @include media($desktop) {
     h1 {
       font-size: 88px;
@@ -60,7 +60,7 @@ header.gemconf {
 
 .conference {
   @include outer-container(100%);
-  $max-width: 1420px;  
+  $max-width: 1420px;
 
   .center {
     text-align: center;
@@ -131,7 +131,7 @@ header.gemconf {
       @include span-columns(6);
     }
   }
-  
+
   .instructors {
     img {
       float: left;
@@ -162,7 +162,7 @@ header.gemconf {
   .sponsor-category {
     margin-top: 2em;
   }
-  
+
   .sponsors-footer {
     margin-top: 4em;
   }
